Fix flex direction again for experience on smaller devices

--- a/src/app/theme/theme_additions.css
+++ b/src/app/theme/theme_additions.css
@@ -87,7 +87,7 @@ a:hover {
 }
 
 @media (max-width: 992px) {
-  #homesection > div:nth-child(2) {
+  #homesection > section:nth-child(2) {
     flex-direction: column;
   }
 
